fixed music horizontal scroll bar

--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -338,7 +338,7 @@ button {
     margin-bottom: 20px;
   }
   .indulgent-title {
-    font-size: 50px;
+    font-size: 45px;
   }
   .indulgent-grid {
     grid-template-columns: repeat(2, 50%);
